# multiple_language_environment

./: .gitignore  README.md  pyproject.toml
CSharpProgram/: Program.cs  README.md
JavaProgram/: README.md  pom.xml
JavaProgram/src/main/java/com/example/: App.java  JavaProgram.java
JavaProgram/src/test/java/com/example/: JavaProgram.java
frontend/: README.md  package.json
frontend/src/: App.css  App.js
src/: main.py
