[tool.poetry]
name = "multi-code-environment"
version = "0.1.0"
description = "C#, Java, and Python being used together to get results. Multi-language collab."
authors = ["thatwonguy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
